Finalize Footer section and complete desktop version of the project - Styled the Footer section for a polished look:   - Adjusted grid column proportions:     - Assigned `2fr` to the first two columns for larger content areas.     - Assigned `1fr` to the remaining other column, totaling five fractional units for balanced layout.   - Aligned and refined the layout of icons, addresses, and navigation links.   - Adjusted the copyright text positioning:     - Used `margin-top: auto` to align it to the bottom of its grid.     - Applied `display: flex` and `flex-direction: column` for proper alignment and flexibility. - Enhanced the visual separation:   - Added a subtle 1px horizontal line between the Footer and the last CTA section for a cleaner look.   - Ensured consistent padding between the sections to maintain visual balance. - Updated Header links:   - Added missing `href` attributes to navigation links for functionality. - Completed the desktop version:   - Ensured all sections are fully styled and aligned for desktop layouts.

--- a/css/style.css
+++ b/css/style.css
@@ -332,7 +332,8 @@
 /*******************************/
 
 .section-cta {
-  padding: 9.6rem 0;
+  /* top / right / bottom / left */
+  padding: 4.8rem 0 12.8rem 0;
 }
 
 .cta {
@@ -432,5 +433,89 @@
 /*******************************/
 
 .footer {
-  padding: 9.6rem 0;
+  padding: 12.8rem 0;
+  border-top: 1px solid #eee;
+}
+
+.grid--footer {
+  grid-template-columns: 2fr 2fr 1fr;
+}
+
+.logo-col {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-logo {
+  display: block;
+  margin-bottom: 3.2rem;
+}
+
+.social-links {
+  list-style: none;
+  display: flex;
+  gap: 2.4rem;
+}
+
+.social-icon {
+  height: 3rem;
+  width: 3rem;
+}
+
+.copyright {
+  font-size: 1.4rem;
+  line-height: 1.6;
+  color: #676767;
+  margin-top: auto;
+}
+
+.footer-heading {
+  font-size: 1.8rem;
+  font-weight: 500;
+  margin-bottom: 4rem;
+}
+
+.contacts {
+  font-style: normal;
+  font-size: 1.6rem;
+  line-height: 1.6;
+}
+
+.contacts p,
+.contacts a {
+  display: flex;
+  gap: 1.2rem;
+}
+
+.add-icon {
+  height: 2.4rem;
+  width: 2.4rem;
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.address {
+  margin-bottom: 2.4rem;
+}
+
+.footer-nav {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+
+.footer-link:link,
+.footer-link:visited {
+  text-decoration: none;
+  font-size: 1.6rem;
+  color: #676767;
+  transition: all 0.3s;
+}
+
+.footer-link:hover,
+.footer-link:active {
+  color: #333;
 }
